Fixes copy, alignment, links

--- a/_source/_assets/sass/style.scss
+++ b/_source/_assets/sass/style.scss
@@ -77,6 +77,10 @@ article {
 article {
   text-align: center;
 
+  p {
+    text-align: left;
+  }
+
   h2 {
     text-transform: uppercase;
     font-size: 1.618em;
